--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="col-lg-4">
             <h2>Repositories<img class="img-circle" src="static/fonts/drawer.svg" alt="repsitories image" width="80" height="80"></h2>
-            <p>If you are interested in the projects I am working on, you can check out my github repositories.</p>
+            <p>If you are interested in the projects I am working on, you can check out my GitHub repositories.</p>
         </div>
     </div>
     
@@ -114,7 +114,7 @@
                     <msg> In 2016, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis.</msg>
                 </div>
                 <div class="grid-item sztaki">
-                    <h2>MTA SZTAKI Datamining and Search Group</h2>
+                    <h2>DMS Group Software Developer</h2>
                     <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a software developer. In the last few years, I have been working on data mining projects.</msg>
                 </div>
                 <div class="grid-item twitter">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="grid-item studies">
                     <h2>Applied mathematics MSc</h2>
-                    <msg>In 2015, I graduated as an applied mathematician at Eötvös Lóránd University (<a class="wlink" href="http://www.math.elte.hu/en/?">ELTE</a>). My degree has a specialization in Computer Science.</msg>
+                    <msg>In 2015, I graduated as an applied mathematician at Eötvös Loránd University (<a class="wlink" href="http://www.math.elte.hu/en/?">ELTE</a>). My degree has a specialization in Computer Science.</msg>
                 </div>
                 <div class="grid-item praudit">
                     <h2>Praudit trainee</h2>
@@ -168,7 +168,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Contact information</h2>
                     <p><a style="color: #000;" href="mailto:ferdzso05@gmail.com">ferdzso05@gmail.com</a></p>
-                    <div class="col-xs-12" style="height:60px;"></div>
+                    <div class="col-xs-12" style="height:40px;"></div>
                     <ul class="list-inline banner-social-buttons">
                         <li>
                             <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/en.png"></img></i> <span class="network-name">CV</span></a>
