--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="col-lg-4">
             <h2>Education<img class="img-circle" src="static/fonts/study.svg" alt="education image" width="80" height="80"></h2>
-            <p>I graduated at Eötvös Loránd Universitiy in 2015 as an applied mathematician. I am interested in datamining and dynamic graphs.</p>
+            <p>I graduated at Eötvös Loránd University in 2015 as an applied mathematician. I am interested in datamining and dynamic graphs.</p>
         </div>
         <div class="col-lg-4">
             <h2>Repositories<img class="img-circle" src="static/fonts/drawer.svg" alt="repsitories image" width="80" height="80"></h2>
@@ -107,15 +107,15 @@
             <div class="grid">
                 <div class="grid-item conf">
                     <h2>Complex Networks 2017</h2>
-                    <msg>I will present a poster related to my PhD research area on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
+                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
                 </div>
                 <div class="grid-item studies">
                     <h2>PhD studies in Computer Science</h2>
-                    <msg> In 2016, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis.</msg>
+                    <msg> In 2016, I have started PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis.</msg>
                 </div>
                 <div class="grid-item sztaki">
                     <h2>DMS Group Software Developer</h2>
-                    <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a software developer. In the last few years, I have been working on data mining projects.</msg>
+                    <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a Software Developer. In the last few years, I have been working on data mining projects.</msg>
                 </div>
                 <div class="grid-item twitter">
                     <h2>Twitter Collections</h2>
