--- a/index.html
+++ b/index.html
@@ -106,20 +106,28 @@
         <div class="masonry-content">
             <div class="grid">
                 <div class="grid-item conf">
-                    <h2>Complex Networks 2017</h2>
-                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
+                    <h2>Complex Networks 2018</h2>
+                    <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="https://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="https://github.com/ferencberes/online-node2vec">repository</a>.</msg>
                 </div>
                 <div class="grid-item studies">
                     <h2>PhD studies in Computer Science</h2>
-                    <msg> In 2016, I have started PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis.</msg>
+                    <msg> In 2016, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis. My main focus is dynamic centrality measures and online graph embedding methods.</msg>
                 </div>
-                <div class="grid-item sztaki">
-                    <h2>DMS Group Software Developer</h2>
-                    <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a Software Developer. In the last few years, I have been working on data mining projects.</msg>
+                <div class="grid-item conf">
+                    <h2>KDD Workshop 2018</h2>
+                    <msg>This year we published our work on dyamic centrality measures in the Applied Network Science <a class="wlink" href="https://appliednetsci.springeropen.com/articles/10.1007/s41109-018-0080-5">journal</a>. The title of our contribution is Temporal walk based centrality metric for graph streams. I also presented the <a class="wlink" href="http://www.mlgworkshop.org/2018/papers/MLG2018_paper_27.pdf">short version</a> of this research at the 14th International Workshop on Mining and Learning with Graphs (KDD18).</msg>
                 </div>
                 <div class="grid-item twitter">
                     <h2>Twitter Collections</h2>
                     <msg>Recently, I have started to collect data from Twitter. During the Summer of 2017 I followed many sport events. My Twitter collection about Roland-Garros 2017, the French open tennis tournament, is available <a class="wlink" href="https://dms.sztaki.hu/hu/letoltes/roland-garros-2017-twitter-collection">here</a>.</msg>
+                </div>
+                <div class="grid-item conf">
+                    <h2>Complex Networks 2017</h2>
+                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
+                </div>
+                <div class="grid-item sztaki">
+                    <h2>DMS Group Software Developer</h2>
+                    <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a Software Developer. In the last few years, I have been working on data mining projects.</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>ECML Challange 2016</h2>
@@ -179,9 +187,9 @@
                         <li>
                             <a href="https://hu.linkedin.com/in/ferenc-b%C3%A9res-7134a150" class="btn btn-default btn-lg"><span class="network-name">Linked</span><i class="fa fa-linkedin fa-fw"></i></a>
                         </li>
-                        <li>
+                        <!--li>
                             <a inactive href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/hu.png"></img></i> <span class="network-name">CV</span></a>
-                        </li>
+                        </li-->
                     </ul>
                 </div>
             </div>
