css masonry update

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <img class="img-circle" src="static/img/profil.png" alt="repsitories image" width="100" height="100">
         </div>
         <div class="col-md-8">
-             <p>Hi, My name is Ferenc Béres. Recently, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is the analysis of temporally evolving networks.</p>
+             <p>Hi, My name is Ferenc Béres. I am a PhD student in Computer Science at Eötvös Loránd University. My area of research is the analysis of temporally evolving networks.</p>
         </div>
     </div>
     <div class="row">
@@ -77,7 +77,7 @@
         </div>
         <div class="col-lg-4">
             <h2>Repositories<img class="img-circle" src="static/fonts/drawer.svg" alt="repsitories image" width="80" height="80"></h2>
-            <p>If you are interested in the projects I am working on, you can check out my GitHub repositories.</p>
+            <p>If you are interested in the projects or the research I am working on, you can check out my GitHub repositories.</p>
         </div>
     </div>
     
@@ -105,7 +105,7 @@
     <div class="row">
         <div class="masonry-content">
             <div class="grid">
-                <div class="grid-item conf">
+                <div class="grid-item conf_big">
                     <h2>Complex Networks 2018</h2>
                     <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="https://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="https://github.com/ferencberes/online-node2vec">repository</a>.</msg>
                 </div>
@@ -113,7 +113,7 @@
                     <h2>PhD studies in Computer Science</h2>
                     <msg> In 2016, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis. My main focus is dynamic centrality measures and online graph embedding methods.</msg>
                 </div>
-                <div class="grid-item conf">
+                <div class="grid-item conf_big">
                     <h2>KDD Workshop 2018</h2>
                     <msg>This year we published our work on dyamic centrality measures in the Applied Network Science <a class="wlink" href="https://appliednetsci.springeropen.com/articles/10.1007/s41109-018-0080-5">journal</a>. The title of our contribution is Temporal walk based centrality metric for graph streams. I also presented the <a class="wlink" href="http://www.mlgworkshop.org/2018/papers/MLG2018_paper_27.pdf">short version</a> of this research at the 14th International Workshop on Mining and Learning with Graphs (KDD18).</msg>
                 </div>
