--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="row">
         <div class="masonry-content">
             <div class="grid">
-                <div class="grid-item conf_big">
+                <div class="grid-item confbig">
                     <h2>Complex Networks 2018</h2>
                     <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="https://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="https://github.com/ferencberes/online-node2vec">repository</a>.</msg>
                 </div>
@@ -113,7 +113,7 @@
                     <h2>PhD studies in Computer Science</h2>
                     <msg> In 2016, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis. My main focus is dynamic centrality measures and online graph embedding methods.</msg>
                 </div>
-                <div class="grid-item conf_big">
+                <div class="grid-item confbig">
                     <h2>KDD Workshop 2018</h2>
                     <msg>This year we published our work on dyamic centrality measures in the Applied Network Science <a class="wlink" href="https://appliednetsci.springeropen.com/articles/10.1007/s41109-018-0080-5">journal</a>. The title of our contribution is Temporal walk based centrality metric for graph streams. I also presented the <a class="wlink" href="http://www.mlgworkshop.org/2018/papers/MLG2018_paper_27.pdf">short version</a> of this research at the 14th International Workshop on Mining and Learning with Graphs (KDD18).</msg>
                 </div>
