--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="row">
         <div class="masonry-content">
             <div class="grid">
-                <div class="grid-item conf">
+                <div class="grid-item confbig">
                     <h2>Complex Networks 2018</h2>
                     <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="https://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="https://github.com/ferencberes/online-node2vec">repository</a>.</msg>
                 </div>
