--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="grid">
                 <div class="grid-item big_conf">
                     <h2>Complex Networks 2018</h2>
-                    <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="https://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="https://github.com/ferencberes/online-node2vec">repository</a>.</msg>
+                    <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="http://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="http://github.com/ferencberes/online-node2vec/">repository</a>.</msg>
                 </div>
                 <div class="grid-item studies">
                     <h2>PhD studies in Computer Science</h2>
