--- a/index.html
+++ b/index.html
@@ -117,17 +117,21 @@
                     <h2>KDD Workshop 2018</h2>
                     <msg>This year we published our work on dyamic centrality measures in the Applied Network Science <a class="wlink" href="https://appliednetsci.springeropen.com/articles/10.1007/s41109-018-0080-5">journal</a>. The title of our contribution is Temporal walk based centrality metric for graph streams. I also presented the <a class="wlink" href="http://www.mlgworkshop.org/2018/papers/MLG2018_paper_27.pdf">short version</a> of this research at the 14th International Workshop on Mining and Learning with Graphs (KDD18).</msg>
                 </div>
-                <!--div class="grid-item twitter">
+                <div class="grid-item twitter">
                     <h2>Twitter Collections</h2>
                     <msg>Recently, I have started to collect data from Twitter. During the Summer of 2017 I followed many sport events. My Twitter collection about Roland-Garros 2017, the French open tennis tournament, is available <a class="wlink" href="https://dms.sztaki.hu/hu/letoltes/roland-garros-2017-twitter-collection">here</a>.</msg>
-                </div-->
-                <div class="grid-item conf">
-                    <h2>Complex Networks 2017</h2>
-                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
                 </div>
                 <div class="grid-item sztaki">
                     <h2>DMS Group Software Developer</h2>
                     <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a Software Developer. In the last few years, I have been working on data mining projects.</msg>
+                </div>
+                <div class="grid-item conf">
+                    <h2>Complex Networks 2017</h2>
+                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
+                </div>
+                <div class="grid-item prog_lang">
+                    <h2>Programming Languages</h2>
+                    <msg>During my work I use the following programming languages: Python, C++, Java, Bash, SQL, HTML</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>ECML Challange 2016</h2>
@@ -140,10 +144,6 @@
                 <div class="grid-item praudit">
                     <h2>Praudit trainee</h2>
                     <msg>Beside my university studies I had been working as a trainee at <br><a class="wlink" href="http://www.praudit.hu/">Praudit Kft.</a> for almost two years. During this time I got acquainted with databases and system logging.</msg>
-                </div>
-                <div class="grid-item prog_lang">
-                    <h2>Programming Languages</h2>
-                    <msg>During my work I use the following programming languages: Python, C++, Java, Bash, SQL, HTML</msg>
                 </div>
             </div>
         </div>
