--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="grid-item twitter">
                     <h2>Twitter Collections</h2>
-                    <msg>Recently, I have started to collect data from Twitter. During the Summer of 2017 I followed many sport events. My Twitter collection about Roland-Garros 2017, the French open tennis tournament, is available <a class="wlink" href="https://dms.sztaki.hu/hu/letoltes/roland-garros-2017-twitter-collection">here</a>.</msg>
+                    <msg>Recently, I have started to collect data from Twitter. During 2017 I followed two major tennis tournament events. My Twitter collection about Roland-Garros 2017 and US Open 2017, is available <a class="wlink" href="https://dms.sztaki.hu/hu/letoltes/temporal-katz-centrality-data-sets">here</a>.</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>Complex Networks 2017</h2>
@@ -186,6 +186,12 @@
                         </li>
                         <li>
                             <a href="https://hu.linkedin.com/in/ferenc-b%C3%A9res-7134a150" class="btn btn-default btn-lg"><span class="network-name">Linked</span><i class="fa fa-linkedin fa-fw"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><span class="network-name">Scholar</span><i class="fa fa-google fa-fw"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name">ResearchGate</span><i class="fa fa-researchgate fa-fw"></i></a>
                         </li>
                         <!--li>
                             <a inactive href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/hu.png"></img></i> <span class="network-name">CV</span></a>
