recsys challange info update

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
                     <h2>Twitter Collections</h2>
                     <msg>Recently, I have started to collect data from Twitter. During 2017 I followed two major tennis tournament events. My Twitter collection about Roland-Garros 2017 and US Open 2017, is available <a class="wlink" href="https://dms.sztaki.hu/hu/letoltes/temporal-katz-centrality-data-sets">here</a>.</msg>
                 </div>
+                <div class="grid-item challenge">
+                    <h2>RecSys Challange 2018</h2>
+                    <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challange. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
+                </div>
                 <div class="grid-item conf">
                     <h2>Complex Networks 2017</h2>
                     <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
@@ -190,9 +194,9 @@
                         <li>
                             <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i><span class="network-name"> Scholar</span></a>
                         </li>
-                        <!--li>
-                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name">ResearchGate</span><i class="fa fa-researchgate fa-fw"></i></a>
-                        </li-->
+                        <li>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fa fa-researchgate fa-fw"></i></a>
+                        </li>
                         <!--li>
                             <a inactive href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/hu.png"></img></i> <span class="network-name">CV</span></a>
                         </li-->
