roadmap update + icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Ferenc Béres</title>
     
     <link href="static/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="static/css/custom.css" rel="stylesheet">
     <link href="static/css/masonry.css" rel="stylesheet">
     <link href="static/css/home.css" rel="stylesheet">
@@ -125,21 +126,21 @@
                     <h2>RecSys Challange 2018</h2>
                     <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challange. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
                 </div>
-                <div class="grid-item conf">
-                    <h2>Complex Networks 2017</h2>
-                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
-                </div>
                 <div class="grid-item sztaki">
                     <h2>DMS Group Software Developer</h2>
                     <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a Software Developer. In the last few years, I have been working on data mining projects.</msg>
                 </div>
                 <div class="grid-item conf">
-                    <h2>ECML Challange 2016</h2>
-                    <msg>In 2016, I was one of the organizer of the ECML/PKDD Discovery Challange. On the conference I held a presentation about the tasks and solutions of the <a class="wlink" href="https://dms.sztaki.hu/ecml-pkkd-2016/#/app/organizers">Bank Card Usage Challange</a>.</msg>
+                    <h2>Complex Networks 2017</h2>
+                    <msg>I presented a poster related to my PhD research on the Complex Networks 2017 conference. The title of the poster is <a class="wlink" href="https://github.com/ferencberes/online-centrality/blob/master/documents/complex_networks_2017_poster.pdf">Online Centrality in Temporally Evolving Networks</a>.</msg>
                 </div>
                 <div class="grid-item prog_lang">
                     <h2>Programming Languages</h2>
                     <msg>During my work I use the following programming languages: Python, C++, Java, Bash, SQL, HTML</msg>
+                </div>
+                <div class="grid-item conf">
+                    <h2>ECML Challange 2016</h2>
+                    <msg>In 2016, I was one of the organizer of the ECML/PKDD Discovery Challange. On the conference I held a presentation about the tasks and solutions of the <a class="wlink" href="https://dms.sztaki.hu/ecml-pkkd-2016/#/app/organizers">Bank Card Usage Challange</a>.</msg>
                 </div>
                 <div class="grid-item studies">
                     <h2>Applied mathematics MSc</h2>
@@ -195,7 +196,7 @@
                             <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i><span class="network-name"> Scholar</span></a>
                         </li>
                         <li>
-                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fa fa-researchgate fa-fw"></i></a>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name">ResearchGate</span><i class="fa fa-researchgate fa-fw"></i></a>
                         </li>
                         <!--li>
                             <a inactive href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/hu.png"></img></i> <span class="network-name">CV</span></a>
