--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
                             <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/en.png"></img></i> <span class="network-name">CV</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/ferencberes" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/ferencberes" class="btn btn-default btn-lg"><i class="fab fa-github"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://hu.linkedin.com/in/ferenc-b%C3%A9res-7134a150" class="btn btn-default btn-lg"><span class="network-name">Linked</span><i class="fa fa-linkedin fa-fw"></i></a>
+                            <a href="https://hu.linkedin.com/in/ferenc-b%C3%A9res-7134a150" class="btn btn-default btn-lg"><span class="network-name">Linked</span><i class="fab fa-linkedin-in"></i></a>
                         </li>
                         <li>
-                            <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i><span class="network-name"> Scholar</span></a>
+                            <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fab fa-google"></i><span class="network-name"> Scholar</span></a>
                         </li>
                         <li>
-                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name">ResearchGate</span><i class="fa fa-researchgate fa-fw"></i></a>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name">RG</span><i class="fab fa-researchgate"></i></a>
                         </li>
                         <!--li>
                             <a inactive href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/hu.png"></img></i> <span class="network-name">CV</span></a>
