--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="col-xs-12" style="height:40px;"></div>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"><img src="static/img/en.png"></img></i> <span class="network-name">CV</span></a>
+                            <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"></i> <span class="network-name">CV</span></a>
                         </li>
                         <li>
                             <a href="https://github.com/ferencberes" class="btn btn-default btn-lg"><i class="fab fa-github"></i> <span class="network-name">Github</span></a>
@@ -196,7 +196,7 @@
                             <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fab fa-google"></i><span class="network-name"> Scholar</span></a>
                         </li>
                         <li>
-                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-researchgate"></i></a>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-researchgate fa-3x"></i></a>
                         </li>
                     </ul>
                 </div>
