--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="row">
             <p>Feel free to email me and provide some feedback on my GitHub repositories or on this website!<br> You can download my curriculum vitae in English with the link below.
         </div>    
-        <div class="row">
+        <!--div class="row">
             <div class="contact-section">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Contact information</h2>
@@ -197,6 +197,32 @@
                         </li>
                         <li>
                             <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-researchgate fa-3x"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div-->
+        <div class="row">
+            <div class="contact-section">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Contact information</h2>
+                    <p><a style="color: #000;" href="mailto:ferdzso05@gmail.com">ferdzso05@gmail.com</a></p>
+                    <div class="col-xs-12" style="height:40px;"></div>
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"></i> <span class="network-name">CV</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/ferencberes" class="btn btn-default btn-lg"><i class="fab fa-github-square fa-2x"></i> <span class="network-name"></span></a>
+                        </li>
+                        <li>
+                            <a href="https://hu.linkedin.com/in/ferenc-b%C3%A9res-7134a150" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fab fa-google  fa-2x"></i><span class="network-name"></span></a>
+                        </li>
+                        <li>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-researchgate fa-2x"></i></a>
                         </li>
                     </ul>
                 </div>
