new icons added

--- a/index.html
+++ b/index.html
@@ -205,24 +205,30 @@
         <div class="row">
             <div class="contact-section">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Contact information</h2>
-                    <p><a style="color: #000;" href="mailto:ferdzso05@gmail.com">ferdzso05@gmail.com</a></p>
+                    <!--h2>Contact information</h2-->
+                    <!--p><a style="color: #000;" href="mailto:ferdzso05@gmail.com">ferdzso05@gmail.com</a></p-->
                     <div class="col-xs-12" style="height:40px;"></div>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"></i> <span class="network-name">CV</span></a>
+                            <a href="docs/Beres Ferenc_ENG_CV.pdf" class="btn btn-default btn-lg"></i> <span class="network-name"><i class="fas fa-user fa-2x"></i></span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/ferencberes" class="btn btn-default btn-lg"><i class="fab fa-github-square fa-2x"></i> <span class="network-name"></span></a>
+                            <a href="mailto:ferdzso05@gmail.com" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fas fa-at fa-2x"></i></a>
                         </li>
                         <li>
                             <a href="https://hu.linkedin.com/in/ferenc-b%C3%A9res-7134a150" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-linkedin-in fa-2x"></i></a>
                         </li>
                         <li>
+                            <a href="https://twitter.com/ferencberes91" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-twitter fa-2x"></i></a>
+                        </li>
+                        <li>
                             <a href="https://scholar.google.hu/citations?user=x0IOjskAAAAJ" class="btn btn-default btn-lg"><i class="fab fa-google  fa-2x"></i><span class="network-name"></span></a>
                         </li>
                         <li>
-                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-researchgate fa-2x"></i></a>
+                            <a href="https://www.researchgate.net/profile/Ferenc_Beres" class="btn btn-default btn-lg"><span class="network-name"></span><i class="fab fa-researchgate fa-2x" data-fa-transform="grow-5"></i></a>
+                        </li>
+                         <li>
+                            <a href="https://github.com/ferencberes" class="btn btn-default btn-lg"><i class="fab fa-github-square fa-2x"></i><span class="network-name"></span></a>
                         </li>
                     </ul>
                 </div>
