--- a/index.html
+++ b/index.html
@@ -107,12 +107,16 @@
         <div class="masonry-content">
             <div class="grid">
                 <div class="grid-item conf">
-                    <h2>Complex Networks 2018</h2>
-                    <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="http://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="http://github.com/ferencberes/online-node2vec/">repository</a>.</msg>
+                    <h2>WSDM Challenge 2019</h2>
+                    <msg>I was part of the <a class="wlink" href="https://www.crowdai.org/challenges/spotify-sequential-skip-prediction-challenge/leaderboards">Definitive Turtles</a> team that achieved 10th prize at the ACM International Conference on Web Search and Data Mining (WSDM) Cup. Our paper, <a class="wlink" href="https://people.eng.unimelb.edu.au/jianzhongq/wsdm19-cup-reports/reports/report16.pdf"> Sequential skip prediction using deep learning and ensembles</a> is available on the competition website.</msg>
                 </div>
                 <div class="grid-item studies">
                     <h2>PhD studies in Computer Science</h2>
                     <msg> In 2016, I have started my PhD studies in Computer Science at Eötvös Loránd University. My area of research is dynamic network analysis. My main focus is dynamic centrality measures and online graph embedding methods.</msg>
+                </div>
+                <div class="grid-item conf">
+                    <h2>Complex Networks 2018</h2>
+                    <msg>I am going to be a spotlight session presenter at the Complex Networks 2018 conference. The title of our work is <a class="wlink" href="http://github.com/ferencberes/online-node2vec/blob/master/docs/node_embeddings_in_dynamic_graphs.pdf">Node Embeddings in Dynamic Graphs</a>. Our code and Twitter data sets are available in this GitHub <a class="wlink" href="http://github.com/ferencberes/online-node2vec/">repository</a>.</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>KDD Workshop 2018</h2>
@@ -122,9 +126,9 @@
                     <h2>Twitter Collections</h2>
                     <msg>Recently, I have started to collect data from Twitter. During 2017 I followed two major tennis tournament events. My Twitter collection about Roland-Garros 2017 and US Open 2017, is available <a class="wlink" href="https://dms.sztaki.hu/hu/letoltes/temporal-katz-centrality-data-sets">here</a>.</msg>
                 </div>
-                <div class="grid-item challenge">
-                    <h2>RecSys Challange 2018</h2>
-                    <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challange. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
+                <div class="grid-item conf">
+                    <h2>RecSys Challenge 2018</h2>
+                    <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challenge. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
                 </div>
                 <div class="grid-item sztaki">
                     <h2>DMS Group Software Developer</h2>
@@ -139,8 +143,8 @@
                     <msg>During my work I use the following programming languages: Python, C++, Java, Bash, SQL, HTML</msg>
                 </div>
                 <div class="grid-item conf">
-                    <h2>ECML Challange 2016</h2>
-                    <msg>In 2016, I was one of the organizer of the ECML/PKDD Discovery Challange. On the conference I held a presentation about the tasks and solutions of the <a class="wlink" href="https://dms.sztaki.hu/ecml-pkkd-2016/#/app/organizers">Bank Card Usage Challange</a>.</msg>
+                    <h2>ECML/PKDD conference 2016</h2>
+                    <msg>In 2016, I was one of the organizer of the ECML/PKDD Discovery Challenge. On the conference I held a presentation about the tasks and solutions of the <a class="wlink" href="https://dms.sztaki.hu/ecml-pkkd-2016/#/app/organizers">Bank Card Usage Challenge</a>.</msg>
                 </div>
                 <div class="grid-item studies">
                     <h2>Applied mathematics MSc</h2>
